--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           </ul>
           <div class="d-flex justify-content-center align-items-center">
             <button class="star bg-transparent border-0">
-              <i class="bi bi-star"></i>
+              <img src="./images/icons/star.svg" alt="star" />
             </button>
             <button class="profile bg-transparent mx-3 border-0">
-              <i class="bi bi-person-circle"></i>
+              <img src="./images/icons/profile.svg" alt="profile" />
             </button>
           </div>
         </div>
