--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         >
           <div class="logo"><img src="./images/logo.svg" alt="logo" /></div>
           <ul class="nav">
-            <li>Home</li>
-            <li class="mx-5">About Us</li>
-            <li>Packages</li>
+            <a href="#">Home</a>
+            <a href="#" class="mx-5">About Us</a>
+            <a href="#">Packages</a>
           </ul>
           <div class="d-flex justify-content-center align-items-center">
             <button class="star bg-transparent border-0">
