--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <!-- HEADER START -->
+
     <div class="container-fluid hero">
       <div class="row">
         <div
@@ -26,7 +27,7 @@
         >
           <a href="#"><img src="./images/logo.svg" alt="logo" /></a>
 
-          <ul class="travelNav">
+          <ul class="travelNav d-md-flex d-none">
             <li>
               <a href="#">Home</a>
             </li>
@@ -68,42 +69,59 @@
         </div>
       </div>
     </div>
+
     <!-- HEADER END -->
 
     <!-- _________________________________________________________________________________ -->
 
     <!-- SERVICE START -->
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
           <h2 class="fw-bold text-center mt-5">Our Service</h2>
         </div>
-        <div
-          class="col-11 mx-auto max-width py-4 mb-5 d-flex justify-content-between"
-        >
-          <div class="card1 p-4">
-            <i class="bi bi-ticket-perforated"></i>
-            <h4 class="mt-4 mb-3 fw-bold">Ticket Booking</h4>
-            <p>
-              We book all kinds of national and international ticket for your
-              destination.
-            </p>
-          </div>
-          <div class="card2 p-4">
-            <img src="./images/icons/hotel.svg" alt="hotel-icon" />
-            <h4 class="mt-5 mb-3 fw-bold">Hotel Booking</h4>
-            <p>You can easily book your hotel in your budget from here.</p>
-          </div>
-          <div class="card1 p-4">
-            <img src="./images/icons/click.svg" alt="tour-icon" />
-            <h4 class="mt-5 mb-3 fw-bold">Tour Plan</h4>
-            <p>
-              We provide you the best plan within a short time to explore more.
-            </p>
-          </div>
+      </div>
+      <div
+        class="row mt-5 mb-md-5 mx-auto max-width d-flex justify-content-md-between justify-content-center"
+      >
+        <!-- 1 -->
+
+        <div class="col-md-4 mb-md-0 mb-5 card1 p-4 text-md-start text-center">
+          <i class="bi bi-ticket-perforated"></i>
+          <h4 class="mt-4 mb-3 fw-bold">Ticket Booking</h4>
+          <p>
+            We book all kinds of national and international ticket for your
+            destination.
+          </p>
         </div>
+
+        <!-- 1 -->
+
+        <!-- 2 -->
+
+        <div class="col-md-4 mb-md-0 mb-5 card2 p-4 text-md-start text-center">
+          <img src="./images/icons/hotel.svg" alt="hotel-icon" />
+          <h4 class="mt-5 mb-3 fw-bold">Hotel Booking</h4>
+          <p>You can easily book your hotel in your budget from here.</p>
+        </div>
+
+        <!-- 2 -->
+
+        <!-- 3 -->
+
+        <div class="col-md-4 mb-md-0 mb-5 card1 p-4 text-md-start text-center">
+          <img src="./images/icons/click.svg" alt="tour-icon" />
+          <h4 class="mt-5 mb-3 fw-bold">Tour Plan</h4>
+          <p>
+            We provide you the best plan within a short time to explore more.
+          </p>
+        </div>
+
+        <!-- 3 -->
       </div>
     </div>
+
     <!-- SERVICE END -->
 
     <!-- _________________________________________________________________________________ -->
@@ -121,8 +139,12 @@
             facilities.
           </p>
           <p class="text-center">Your satisfaction is our main priority.</p>
-          <div class="mt-5 px-5 d-flex justify-content-between">
-            <div class="ratingCard">
+          <div
+            class="row mt-5 d-flex justify-content-md-between justify-content-center"
+          >
+            <!-- 1 -->
+
+            <div class="col-md-3 mb-md-0 mb-5 ratingCard">
               <img
                 src="./images/icons/calendar.svg"
                 alt="calendar-icon"
@@ -131,7 +153,12 @@
               <h1 class="mt-4 fw-bold ratingHeading">15+</h1>
               <p class="ratingPara m-0">Years of Experience</p>
             </div>
-            <div class="ratingCard">
+
+            <!-- 1 -->
+
+            <!-- 2 -->
+
+            <div class="col-md-3 mb-md-0 mb-5 ratingCard">
               <img
                 src="./images/icons/barchart.svg"
                 alt="barchart-icon"
@@ -140,12 +167,22 @@
               <h1 class="mt-4 fw-bold ratingHeading">15k+</h1>
               <p class="ratingPara m-0">Happy Travellers</p>
             </div>
-            <div class="ratingCard">
+
+            <!-- 2 -->
+
+            <!-- 3 -->
+
+            <div class="col-md-3 mb-md-0 mb-5 ratingCard">
               <img src="./images/icons/map.svg" alt="map-icon" class="mt-5" />
               <h1 class="mt-4 fw-bold ratingHeading">650+</h1>
               <p class="ratingPara m-0">Places Visited</p>
             </div>
-            <div class="ratingCard">
+
+            <!-- 3 -->
+
+            <!-- 4 -->
+
+            <div class="col-md-3 mb-md-0 ratingCard">
               <img
                 src="./images/icons/history.svg"
                 alt="history-icon"
@@ -154,6 +191,8 @@
               <h1 class="mt-4 fw-bold ratingHeading">2k+</h1>
               <p class="ratingPara m-0">Travel History</p>
             </div>
+
+            <!-- 4 -->
           </div>
         </div>
         <div class="col-11 mx-auto max-width py-4"></div>
