--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       >
         <!-- 1 -->
 
-        <div class="col-md-4 mb-md-0 mb-5 card1 p-4 text-md-start text-center">
+        <div class="col-lg-4 mb-lg-0 mb-5 card1 p-4 text-md-start text-center">
           <i class="bi bi-ticket-perforated"></i>
           <h4 class="mt-4 mb-3 fw-bold">Ticket Booking</h4>
           <p>
@@ -100,7 +100,7 @@
 
         <!-- 2 -->
 
-        <div class="col-md-4 mb-md-0 mb-5 card2 p-4 text-md-start text-center">
+        <div class="col-lg-4 mb-lg-0 mb-5 card2 p-4 text-md-start text-center">
           <img src="./images/icons/hotel.svg" alt="hotel-icon" />
           <h4 class="mt-5 mb-3 fw-bold">Hotel Booking</h4>
           <p>You can easily book your hotel in your budget from here.</p>
@@ -110,7 +110,7 @@
 
         <!-- 3 -->
 
-        <div class="col-md-4 mb-md-0 mb-5 card1 p-4 text-md-start text-center">
+        <div class="col-lg-4 mb-lg-0 mb-5 card1 p-4 text-md-start text-center">
           <img src="./images/icons/click.svg" alt="tour-icon" />
           <h4 class="mt-5 mb-3 fw-bold">Tour Plan</h4>
           <p>
