--- a/index.html
+++ b/index.html
@@ -87,35 +87,41 @@
       >
         <!-- 1 -->
 
-        <div class="col-md-4 mb-md-0 mb-5 card1 p-4 text-md-start text-center">
-          <i class="bi bi-ticket-perforated"></i>
-          <h4 class="mt-4 mb-3 fw-bold">Ticket Booking</h4>
-          <p>
-            We book all kinds of national and international ticket for your
-            destination.
-          </p>
+        <div class="col-md-4">
+          <div class="mb-lg-0 mb-5 card1 p-4 text-md-start text-center mx-auto">
+            <i class="bi bi-ticket-perforated"></i>
+            <h4 class="mt-4 mb-3 fw-bold">Ticket Booking</h4>
+            <p>
+              We book all kinds of national and international ticket for your
+              destination.
+            </p>
+          </div>
         </div>
 
         <!-- 1 -->
 
         <!-- 2 -->
 
-        <div class="col-md-4 mb-md-0 mb-5 card2 p-4 text-md-start text-center">
-          <img src="./images/icons/hotel.svg" alt="hotel-icon" />
-          <h4 class="mt-5 mb-3 fw-bold">Hotel Booking</h4>
-          <p>You can easily book your hotel in your budget from here.</p>
+        <div class="col-md-4">
+          <div class="mb-lg-0 mb-5 card2 p-4 text-md-start text-center mx-auto">
+            <img src="./images/icons/hotel.svg" alt="hotel-icon" />
+            <h4 class="mt-5 mb-3 fw-bold">Hotel Booking</h4>
+            <p>You can easily book your hotel in your budget from here.</p>
+          </div>
         </div>
 
         <!-- 2 -->
 
         <!-- 3 -->
 
-        <div class="col-md-4 mb-md-0 mb-5 card1 p-4 text-md-start text-center">
-          <img src="./images/icons/click.svg" alt="tour-icon" />
-          <h4 class="mt-5 mb-3 fw-bold">Tour Plan</h4>
-          <p>
-            We provide you the best plan within a short time to explore more.
-          </p>
+        <div class="col-md-4">
+          <div class="mb-lg-0 mb-5 card1 p-4 text-md-start text-center mx-auto">
+            <img src="./images/icons/click.svg" alt="tour-icon" />
+            <h4 class="mt-5 mb-3 fw-bold">Tour Plan</h4>
+            <p>
+              We provide you the best plan within a short time to explore more.
+            </p>
+          </div>
         </div>
 
         <!-- 3 -->
@@ -144,52 +150,60 @@
           >
             <!-- 1 -->
 
-            <div class="col-md-3 mb-md-0 mb-5 ratingCard">
-              <img
-                src="./images/icons/calendar.svg"
-                alt="calendar-icon"
-                class="mt-5"
-              />
-              <h1 class="mt-4 fw-bold ratingHeading">15+</h1>
-              <p class="ratingPara m-0">Years of Experience</p>
+            <div class="col-md-3">
+              <div class="mb-md-0 mb-5 ratingCard mx-auto">
+                <img
+                  src="./images/icons/calendar.svg"
+                  alt="calendar-icon"
+                  class="mt-5"
+                />
+                <h1 class="mt-4 fw-bold ratingHeading">15+</h1>
+                <p class="ratingPara m-0">Years of Experience</p>
+              </div>
             </div>
 
             <!-- 1 -->
 
             <!-- 2 -->
 
-            <div class="col-md-3 mb-md-0 mb-5 ratingCard">
-              <img
-                src="./images/icons/barchart.svg"
-                alt="barchart-icon"
-                class="mt-5"
-              />
-              <h1 class="mt-4 fw-bold ratingHeading">15k+</h1>
-              <p class="ratingPara m-0">Happy Travellers</p>
+            <div class="col-md-3">
+              <div class="mb-md-0 mb-5 ratingCard mx-auto">
+                <img
+                  src="./images/icons/barchart.svg"
+                  alt="barchart-icon"
+                  class="mt-5"
+                />
+                <h1 class="mt-4 fw-bold ratingHeading">15k+</h1>
+                <p class="ratingPara m-0">Happy Travellers</p>
+              </div>
             </div>
 
             <!-- 2 -->
 
             <!-- 3 -->
 
-            <div class="col-md-3 mb-md-0 mb-5 ratingCard">
-              <img src="./images/icons/map.svg" alt="map-icon" class="mt-5" />
-              <h1 class="mt-4 fw-bold ratingHeading">650+</h1>
-              <p class="ratingPara m-0">Places Visited</p>
+            <div class="col-md-3">
+              <div class="mb-md-0 mb-5 ratingCard mx-auto">
+                <img src="./images/icons/map.svg" alt="map-icon" class="mt-5" />
+                <h1 class="mt-4 fw-bold ratingHeading">650+</h1>
+                <p class="ratingPara m-0">Places Visited</p>
+              </div>
             </div>
 
             <!-- 3 -->
 
             <!-- 4 -->
 
-            <div class="col-md-3 mb-md-0 ratingCard">
-              <img
-                src="./images/icons/history.svg"
-                alt="history-icon"
-                class="mt-5"
-              />
-              <h1 class="mt-4 fw-bold ratingHeading">2k+</h1>
-              <p class="ratingPara m-0">Travel History</p>
+            <div class="col-md-3">
+              <div class="mb-md-0 ratingCard mx-auto">
+                <img
+                  src="./images/icons/history.svg"
+                  alt="history-icon"
+                  class="mt-5"
+                />
+                <h1 class="mt-4 fw-bold ratingHeading">2k+</h1>
+                <p class="ratingPara m-0">Travel History</p>
+              </div>
             </div>
 
             <!-- 4 -->
