--- a/index.html
+++ b/index.html
@@ -217,13 +217,157 @@
 
     <!-- _________________________________________________________________________________ -->
 
-    <!--  START -->
+    <!-- POPULAR DESTINATIONS START -->
 
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-11 mx-auto max-width py-4">
+          <h2 class="fw-bold text-center my-5">Our Popular Destinations</h2>
+          <div class="row">
+            <!-- map & dots start -->
+
+            <div class="col-lg-6 d-lg-block d-none hero3">
+              <div class="dot1">
+                <div class="dot"></div>
+              </div>
+              <div class="dot2">
+                <div class="dot"></div>
+              </div>
+              <div class="dot3">
+                <div class="dot"></div>
+              </div>
+            </div>
+
+            <!-- map & dots end -->
+
+            <!-- destination cards start -->
+
+            <div class="col-lg-6 d-flex flex-column justify-content-lg-around">
+              <!-- thailand card  -->
+
+              <div class="dCard mb-lg-0 mb-5">
+                <div class="d-flex align-items-center justify-content-between">
+                  <img
+                    src="./images/thailand.png"
+                    alt="thailand"
+                    class="imgD"
+                  />
+                  <h6 class="fw-semibold m-0">Thailand</h6>
+                  <p class="fw-semibold m-0">
+                    20+ Spots <br />
+                    2D & 3N
+                  </p>
+                  <a href="#" class="mx-md-4"
+                    ><img
+                      src="./images/icons/arrow-right.svg"
+                      alt="arrow-right"
+                  /></a>
+                </div>
+              </div>
+
+              <!-- indonesia card  -->
+
+              <div class="dCard mb-lg-0 mb-5">
+                <div class="d-flex align-items-center justify-content-between">
+                  <img
+                    src="./images/indonesia.png"
+                    alt="indonesia"
+                    class="imgD"
+                  />
+                  <h6 class="fw-semibold m-0">Indonesia</h6>
+                  <p class="fw-semibold m-0">
+                    25+ Spots <br />
+                    3D & 3N
+                  </p>
+                  <a href="#" class="mx-md-4"
+                    ><img
+                      src="./images/icons/arrow-right.svg"
+                      alt="arrow-right"
+                  /></a>
+                </div>
+              </div>
+
+              <!-- new zealand card  -->
+
+              <div class="dCard mb-lg-0 mb-5">
+                <div class="d-flex align-items-center justify-content-between">
+                  <img
+                    src="./images/newzealand.png"
+                    alt="newzealand"
+                    class="imgD"
+                  />
+                  <h6 class="fw-semibold m-0">New Zealand</h6>
+                  <p class="fw-semibold m-0">
+                    20+ Spots <br />
+                    3D & 2N
+                  </p>
+                  <a href="#" class="mx-md-4"
+                    ><img
+                      src="./images/icons/arrow-right.svg"
+                      alt="arrow-right"
+                  /></a>
+                </div>
+              </div>
+            </div>
+
+            <!-- destination cards end  -->
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--  POPULAR DESTINATIONS END -->
+
+    <!-- _________________________________________________________________________________ -->
+
+    <!--Best Packages START -->
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-11 mx-auto max-width py-4">
+          <h2 class="fw-bold text-center my-5">Best Packages For You</h2>
+          <div class="row">
+            <div class="d-flex justify-content-between">
+              <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+                >Hot Deals</a
+              >
+              <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+                >Bag Pack</a
+              >
+              <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+                >South Asia</a
+              >
+              <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+                >Honeymoon</a
+              >
+              <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+                >Europe</a
+              >
+              <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+                >More</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--  Best Packages END -->
+
+    <!-- _________________________________________________________________________________ -->
+
+    <!-- START -->
     <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4"></div>
       </div>
     </div>
+
+    <!-- END -->
+
+    <!-- _________________________________________________________________________________ -->
+
+    <!-- START -->
 
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
