--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
     <!--Best Packages START -->
 
-    <div class="container-fluid">
+    <div class="container-fluid bestP">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
           <h2 class="fw-bold text-center my-5">Best Packages For You</h2>
@@ -346,6 +346,11 @@
               <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
                 >More</a
               >
+            </div>
+            <div class="">
+              <div class="cardP">
+                <img src="./images/island.png" alt="island" />
+              </div>
             </div>
           </div>
         </div>
