--- a/index.html
+++ b/index.html
@@ -326,87 +326,81 @@
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
           <h2 class="fw-bold text-center my-5">Best Packages For You</h2>
-          <div class="d-flex justify-content-between mb-5">
-            <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+          <div class="d-lg-flex d-none justify-content-between mb-5">
+            <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >Hot Deals</a
             >
-            <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+            <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >Bag Pack</a
             >
-            <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+            <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >South Asia</a
             >
-            <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+            <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >Honeymoon</a
             >
-            <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+            <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >Europe</a
             >
-            <a href="#" class="dealLinks py-3 px-5 rounded-2 fw-semibold"
+            <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >More</a
             >
           </div>
           <div class="d-flex justify-content-between">
-            <div class="col-lg-4 col-md-6">
-              <div class="cardP">
-                <div class="imgP1"></div>
-                <div class="pkgDetails p-3 rounded-bottom-4">
-                  <div class="d-flex justify-content-between">
-                    <p>3 Days, 2 Nights</p>
-                    <p>$500 / Person</p>
-                  </div>
-                  <p class="fw-semibold">
-                    Explore the Beauty of the island for 3 days and 2 nights
-                    with our travel agency
-                  </p>
-                  <div class="d-flex justify-content-between mt-4">
-                    <h6 class="fw-semibold">
-                      <i class="bi bi-geo-alt"></i>Island
-                    </h6>
-                    <a href="#" class="text-black fw-semibold">Know More</a>
-                  </div>
+            <div class="cardP">
+              <div class="imgP1"></div>
+              <div class="pkgDetails p-3 rounded-bottom-4">
+                <div class="d-flex justify-content-between">
+                  <p>3 Days, 2 Nights</p>
+                  <p>$500 / Person</p>
+                </div>
+                <p class="fw-semibold">
+                  Explore the Beauty of the island for 3 days and 2 nights with
+                  our travel agency
+                </p>
+                <div class="d-flex justify-content-between mt-4">
+                  <h6 class="fw-semibold">
+                    <i class="bi bi-geo-alt"></i>Island
+                  </h6>
+                  <a href="#" class="text-black fw-semibold">Know More</a>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="cardP">
-                <div class="imgP1"></div>
-                <div class="pkgDetails p-3 rounded-bottom-4">
-                  <div class="d-flex justify-content-between">
-                    <p>3 Days, 2 Nights</p>
-                    <p>$500 / Person</p>
-                  </div>
-                  <p class="fw-semibold">
-                    Explore the Beauty of the island for 3 days and 2 nights
-                    with our travel agency
-                  </p>
-                  <div class="d-flex justify-content-between mt-4">
-                    <h6 class="fw-semibold">
-                      <i class="bi bi-geo-alt"></i>Island
-                    </h6>
-                    <a href="#" class="text-black fw-semibold">Know More</a>
-                  </div>
+            <div class="cardP">
+              <div class="imgP1"></div>
+              <div class="pkgDetails p-3 rounded-bottom-4">
+                <div class="d-flex justify-content-between">
+                  <p>3 Days, 2 Nights</p>
+                  <p>$500 / Person</p>
+                </div>
+                <p class="fw-semibold">
+                  Explore the Beauty of the island for 3 days and 2 nights with
+                  our travel agency
+                </p>
+                <div class="d-flex justify-content-between mt-4">
+                  <h6 class="fw-semibold">
+                    <i class="bi bi-geo-alt"></i>Island
+                  </h6>
+                  <a href="#" class="text-black fw-semibold">Know More</a>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="cardP">
-                <div class="imgP1"></div>
-                <div class="pkgDetails p-3 rounded-bottom-4">
-                  <div class="d-flex justify-content-between">
-                    <p>3 Days, 2 Nights</p>
-                    <p>$500 / Person</p>
-                  </div>
-                  <p class="fw-semibold">
-                    Explore the Beauty of the island for 3 days and 2 nights
-                    with our travel agency
-                  </p>
-                  <div class="d-flex justify-content-between mt-4">
-                    <h6 class="fw-semibold">
-                      <i class="bi bi-geo-alt"></i>Island
-                    </h6>
-                    <a href="#" class="text-black fw-semibold">Know More</a>
-                  </div>
+            <div class="cardP">
+              <div class="imgP1"></div>
+              <div class="pkgDetails p-3 rounded-bottom-4">
+                <div class="d-flex justify-content-between">
+                  <p>3 Days, 2 Nights</p>
+                  <p>$500 / Person</p>
+                </div>
+                <p class="fw-semibold">
+                  Explore the Beauty of the island for 3 days and 2 nights with
+                  our travel agency
+                </p>
+                <div class="d-flex justify-content-between mt-4">
+                  <h6 class="fw-semibold">
+                    <i class="bi bi-geo-alt"></i>Island
+                  </h6>
+                  <a href="#" class="text-black fw-semibold">Know More</a>
                 </div>
               </div>
             </div>
