--- a/index.html
+++ b/index.html
@@ -326,6 +326,9 @@
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
           <h2 class="fw-bold text-center my-5">Best Packages For You</h2>
+
+          <!-- deal links  -->
+
           <div class="d-lg-flex d-none justify-content-between mb-5">
             <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >Hot Deals</a
@@ -346,63 +349,61 @@
               >More</a
             >
           </div>
-          <div class="d-flex justify-content-between">
-            <div class="cardP">
-              <div class="imgP1"></div>
-              <div class="pkgDetails p-3 rounded-bottom-4">
-                <div class="d-flex justify-content-between">
-                  <p>3 Days, 2 Nights</p>
-                  <p>$500 / Person</p>
-                </div>
-                <p class="fw-semibold">
-                  Explore the Beauty of the island for 3 days and 2 nights with
-                  our travel agency
-                </p>
-                <div class="d-flex justify-content-between mt-4">
-                  <h6 class="fw-semibold">
-                    <i class="bi bi-geo-alt"></i>Island
-                  </h6>
-                  <a href="#" class="text-black fw-semibold">Know More</a>
-                </div>
-              </div>
+
+          <!-- deal links  -->
+        </div>
+      </div>
+      <div
+        class="row mb-md-5 mx-auto max-width d-flex justify-content-md-between justify-content-center"
+      >
+        <div class="cardP">
+          <div class="imgP1"></div>
+          <div class="pkgDetails p-3 rounded-bottom-4">
+            <div class="d-flex justify-content-between">
+              <p>3 Days, 2 Nights</p>
+              <p>$500 / Person</p>
             </div>
-            <div class="cardP">
-              <div class="imgP1"></div>
-              <div class="pkgDetails p-3 rounded-bottom-4">
-                <div class="d-flex justify-content-between">
-                  <p>3 Days, 2 Nights</p>
-                  <p>$500 / Person</p>
-                </div>
-                <p class="fw-semibold">
-                  Explore the Beauty of the island for 3 days and 2 nights with
-                  our travel agency
-                </p>
-                <div class="d-flex justify-content-between mt-4">
-                  <h6 class="fw-semibold">
-                    <i class="bi bi-geo-alt"></i>Island
-                  </h6>
-                  <a href="#" class="text-black fw-semibold">Know More</a>
-                </div>
-              </div>
+            <p class="fw-semibold">
+              Explore the Beauty of the island for 3 days and 2 nights with our
+              travel agency
+            </p>
+            <div class="d-flex justify-content-between mt-4">
+              <h6 class="fw-semibold"><i class="bi bi-geo-alt"></i>Island</h6>
+              <a href="#" class="text-black fw-semibold">Know More</a>
             </div>
-            <div class="cardP">
-              <div class="imgP1"></div>
-              <div class="pkgDetails p-3 rounded-bottom-4">
-                <div class="d-flex justify-content-between">
-                  <p>3 Days, 2 Nights</p>
-                  <p>$500 / Person</p>
-                </div>
-                <p class="fw-semibold">
-                  Explore the Beauty of the island for 3 days and 2 nights with
-                  our travel agency
-                </p>
-                <div class="d-flex justify-content-between mt-4">
-                  <h6 class="fw-semibold">
-                    <i class="bi bi-geo-alt"></i>Island
-                  </h6>
-                  <a href="#" class="text-black fw-semibold">Know More</a>
-                </div>
-              </div>
+          </div>
+        </div>
+        <div class="cardP">
+          <div class="imgP1"></div>
+          <div class="pkgDetails p-3 rounded-bottom-4">
+            <div class="d-flex justify-content-between">
+              <p>3 Days, 2 Nights</p>
+              <p>$500 / Person</p>
+            </div>
+            <p class="fw-semibold">
+              Explore the Beauty of the island for 3 days and 2 nights with our
+              travel agency
+            </p>
+            <div class="d-flex justify-content-between mt-4">
+              <h6 class="fw-semibold"><i class="bi bi-geo-alt"></i>Island</h6>
+              <a href="#" class="text-black fw-semibold">Know More</a>
+            </div>
+          </div>
+        </div>
+        <div class="cardP">
+          <div class="imgP1"></div>
+          <div class="pkgDetails p-3 rounded-bottom-4">
+            <div class="d-flex justify-content-between">
+              <p>3 Days, 2 Nights</p>
+              <p>$500 / Person</p>
+            </div>
+            <p class="fw-semibold">
+              Explore the Beauty of the island for 3 days and 2 nights with our
+              travel agency
+            </p>
+            <div class="d-flex justify-content-between mt-4">
+              <h6 class="fw-semibold"><i class="bi bi-geo-alt"></i>Island</h6>
+              <a href="#" class="text-black fw-semibold">Know More</a>
             </div>
           </div>
         </div>
