--- a/index.html
+++ b/index.html
@@ -353,9 +353,14 @@
           <!-- deal links  -->
         </div>
       </div>
+
+      <!-- Package Cards  -->
+
       <div
         class="row mb-md-5 mx-auto max-width d-flex justify-content-md-between justify-content-center"
       >
+        <!-- 1 -->
+
         <div class="cardP">
           <div class="imgP1"></div>
           <div class="pkgDetails p-3 rounded-bottom-4">
@@ -373,6 +378,11 @@
             </div>
           </div>
         </div>
+
+        <!-- 1 -->
+
+        <!-- 2 -->
+
         <div class="cardP">
           <div class="imgP1"></div>
           <div class="pkgDetails p-3 rounded-bottom-4">
@@ -390,6 +400,11 @@
             </div>
           </div>
         </div>
+
+        <!-- 2 -->
+
+        <!-- 3 -->
+
         <div class="cardP">
           <div class="imgP1"></div>
           <div class="pkgDetails p-3 rounded-bottom-4">
@@ -407,7 +422,11 @@
             </div>
           </div>
         </div>
+
+        <!-- 3 -->
       </div>
+
+      <!-- Package Cards  -->
     </div>
 
     <!--  Best Packages END -->
