--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
-          <h2 class="fw-bold text-center mt-5">Our Service</h2>
+          <h2 class="fw-bold text-center mt-4">Our Service</h2>
         </div>
       </div>
       <div
@@ -136,7 +136,7 @@
 
     <div class="container-fluid rating-bg">
       <div class="row">
-        <div class="col-11 mx-auto max-width py-4"></div>
+        <div class="col-11 mx-auto max-width py-3"></div>
         <div class="col-11 mx-auto max-width py-4 hero2">
           <h2 class="fw-bold text-center">We always try to give you</h2>
           <h2 class="fw-bold text-center">the best service.</h2>
@@ -222,7 +222,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
-          <h2 class="fw-bold text-center my-5">Our Popular Destinations</h2>
+          <h2 class="fw-bold text-center my-4">Our Popular Destinations</h2>
           <div class="row">
             <!-- map & dots start -->
 
@@ -324,12 +324,12 @@
 
     <div class="container-fluid bestP">
       <div class="row">
-        <div class="col-11 mx-auto max-width py-4">
+        <div class="col-11 mx-auto max-width py-3">
           <h2 class="fw-bold text-center my-5">Best Packages For You</h2>
 
           <!-- deal links  -->
 
-          <div class="d-lg-flex d-none justify-content-between mb-5">
+          <div class="d-md-flex d-none max-width justify-content-between mb-5">
             <a href="#" class="dealLinks py-2 px-4 rounded-2 fw-semibold"
               >Hot Deals</a
             >
@@ -357,24 +357,31 @@
       <!-- Package Cards  -->
 
       <div
-        class="row mb-md-5 mx-auto max-width d-flex justify-content-md-between justify-content-center"
+        class="row pb-5 mx-auto max-width d-flex justify-content-md-between justify-content-center"
       >
         <!-- 1 -->
 
-        <div class="cardP">
-          <div class="imgP1"></div>
-          <div class="pkgDetails p-3 rounded-bottom-4">
-            <div class="d-flex justify-content-between">
-              <p>3 Days, 2 Nights</p>
-              <p>$500 / Person</p>
-            </div>
-            <p class="fw-semibold">
-              Explore the Beauty of the island for 3 days and 2 nights with our
-              travel agency
-            </p>
-            <div class="d-flex justify-content-between mt-4">
-              <h6 class="fw-semibold"><i class="bi bi-geo-alt"></i>Island</h6>
-              <a href="#" class="text-black fw-semibold">Know More</a>
+        <div class="col-lg-4 col-md-6">
+          <div class="d-flex justify-content-center mb-lg-0 mb-5">
+            <div class="cardP">
+              <div class="imgP1"></div>
+              <div class="pkgDetails p-3 rounded-bottom-4">
+                <div class="d-flex justify-content-between">
+                  <p>3 Days, 2 Nights</p>
+                  <p>$500 / Person</p>
+                </div>
+                <p class="fw-semibold">
+                  Explore the Beauty of the island for 3 days and 2 nights with
+                  our travel agency.
+                </p>
+                <div class="d-flex justify-content-between mt-4">
+                  <h6 class="fw-semibold">
+                    <i class="bi bi-geo-alt"></i
+                    ><span class="mx-1">Island</span>
+                  </h6>
+                  <a href="#" class="text-black fw-semibold">Know More</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -383,20 +390,25 @@
 
         <!-- 2 -->
 
-        <div class="cardP">
-          <div class="imgP1"></div>
-          <div class="pkgDetails p-3 rounded-bottom-4">
-            <div class="d-flex justify-content-between">
-              <p>3 Days, 2 Nights</p>
-              <p>$500 / Person</p>
-            </div>
-            <p class="fw-semibold">
-              Explore the Beauty of the island for 3 days and 2 nights with our
-              travel agency
-            </p>
-            <div class="d-flex justify-content-between mt-4">
-              <h6 class="fw-semibold"><i class="bi bi-geo-alt"></i>Island</h6>
-              <a href="#" class="text-black fw-semibold">Know More</a>
+        <div class="col-lg-4 col-md-6">
+          <div class="d-flex justify-content-center mb-lg-0 mb-5">
+            <div class="cardP">
+              <div class="imgP2"></div>
+              <div class="pkgDetails p-3 rounded-bottom-4">
+                <div class="d-flex justify-content-between">
+                  <p>3 Days, 2 Nights</p>
+                  <p>$800 / Person</p>
+                </div>
+                <p class="fw-semibold">
+                  Enjoy the Shrimes and blossoms here in this beautiful country.
+                </p>
+                <div class="d-flex justify-content-between mt-4">
+                  <h6 class="fw-semibold">
+                    <i class="bi bi-geo-alt"></i><span class="mx-1"></span>Japan
+                  </h6>
+                  <a href="#" class="text-black fw-semibold">Know More</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -405,25 +417,38 @@
 
         <!-- 3 -->
 
-        <div class="cardP">
-          <div class="imgP1"></div>
-          <div class="pkgDetails p-3 rounded-bottom-4">
-            <div class="d-flex justify-content-between">
-              <p>3 Days, 2 Nights</p>
-              <p>$500 / Person</p>
-            </div>
-            <p class="fw-semibold">
-              Explore the Beauty of the island for 3 days and 2 nights with our
-              travel agency
-            </p>
-            <div class="d-flex justify-content-between mt-4">
-              <h6 class="fw-semibold"><i class="bi bi-geo-alt"></i>Island</h6>
-              <a href="#" class="text-black fw-semibold">Know More</a>
+        <div class="col-lg-4 col-md-6">
+          <div class="d-flex justify-content-center">
+            <div class="cardP">
+              <div class="imgP3"></div>
+              <div class="pkgDetails p-3 rounded-bottom-4">
+                <div class="d-flex justify-content-between">
+                  <p>3 Days, 2 Nights</p>
+                  <p>$600 / Person</p>
+                </div>
+                <p class="fw-semibold">
+                  Explore the majestic mountains and landscapes day and nights.
+                </p>
+                <div class="d-flex justify-content-between mt-4">
+                  <h6 class="fw-semibold">
+                    <i class="bi bi-geo-alt"></i
+                    ><span class="mx-1">Mountains</span>
+                  </h6>
+                  <a href="#" class="text-black fw-semibold">Know More</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
         <!-- 3 -->
+      </div>
+      <div class="d-flex justify-content-center">
+        <button
+          class="discover-btn border-0 mb-5 px-4 py-2 rounded-2 fw-semibold text-light"
+        >
+          Discover more
+        </button>
       </div>
 
       <!-- Package Cards  -->
@@ -433,7 +458,24 @@
 
     <!-- _________________________________________________________________________________ -->
 
+    <!--BOOK YOUR NEXT TRIP START -->
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-11 mx-auto max-width py-4">
+          <h2 class="fw-bold text-center my-4">
+            Book Your Next Trip in 3 Easy Steps
+          </h2>
+        </div>
+      </div>
+    </div>
+
+    <!--BOOK YOUR NEXT TRIP END -->
+
+    <!-- _________________________________________________________________________________ -->
+
     <!-- START -->
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4"></div>
