--- a/index.html
+++ b/index.html
@@ -463,10 +463,34 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
-          <h2 class="fw-bold text-center my-4">
+          <h2 class="fw-bold text-center mt-4">
             Book Your Next Trip in 3 Easy Steps
           </h2>
+          <p class="text-center">Easy and Fast</p>
         </div>
+      </div>
+      <div
+        class="row row pb-5 mx-auto max-width d-flex justify-content-md-between justify-content-center"
+      >
+        <div class="col-md-6">
+          <div class="d-flex flex-column justify-content-between">
+            <div class="step d-flex">
+              <img
+                src="./images/icons/select-icon.png"
+                alt="select-icon"
+                class="step-icon"
+              />
+              <div class="d-flex flex-column justify-content-between">
+                <h6 class="fw-bold">Choose Destination</h6>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Tempora sit.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">img</div>
       </div>
     </div>
 
@@ -476,11 +500,11 @@
 
     <!-- START -->
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4"></div>
       </div>
-    </div>
+    </div> -->
 
     <!-- END -->
 
