--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-11 mx-auto max-width py-4">
-          <h2 class="fw-bold text-center my-4">Our Popular Destinations</h2>
+          <h2 class="fw-bold text-center mt-4 mb-5">
+            Our Popular Destinations
+          </h2>
           <div class="row">
             <!-- map & dots start -->
 
@@ -462,35 +464,61 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-11 mx-auto max-width py-4">
+        <div class="col-11 mx-auto max-width py-4 mb-5">
           <h2 class="fw-bold text-center mt-4">
             Book Your Next Trip in 3 Easy Steps
           </h2>
-          <p class="text-center">Easy and Fast</p>
+          <p class="text-center fs-5">Easy and Fast</p>
         </div>
       </div>
-      <div
-        class="row row pb-5 mx-auto max-width d-flex justify-content-md-between justify-content-center"
-      >
+      <div class="row">
         <div class="col-md-6">
-          <div class="d-flex flex-column justify-content-between">
-            <div class="step d-flex">
+          <div class="d-flex flex-column">
+            <div class="step d-flex mx-auto mb-5">
               <img
                 src="./images/icons/select-icon.png"
                 alt="select-icon"
                 class="step-icon"
               />
-              <div class="d-flex flex-column justify-content-between">
-                <h6 class="fw-bold">Choose Destination</h6>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora sit.
+              <div class="d-flex flex-column justify-content-between px-4">
+                <h6 class="fw-bold bookP">Choose Destination</h6>
+                <p class="bookP">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
+            </div>
+            <div class="step d-flex mx-auto mb-5">
+              <img
+                src="./images/icons/swim-icon.png"
+                alt="swim-icon"
+                class="step-icon"
+              />
+              <div class="d-flex flex-column justify-content-between px-4">
+                <h6 class="fw-bold bookP">Make Payment</h6>
+                <p class="bookP">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
+            </div>
+            <div class="step d-flex mx-auto mb-5">
+              <img
+                src="./images/icons/car-icon.png"
+                alt="car-icon"
+                class="step-icon"
+              />
+              <div class="d-flex flex-column justify-content-between px-4">
+                <h6 class="fw-bold bookP">Reach Airport on Selected Date</h6>
+                <p class="bookP">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
                 </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-6">img</div>
+        <div class="col-md-6"></div>
       </div>
     </div>
 
