--- a/index.html
+++ b/index.html
@@ -518,7 +518,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6"></div>
+        <div class="col-md-6">
+          <div class="bookCard1"></div>
+        </div>
       </div>
     </div>
 
